force-app/main/default/objects/Lead_MTN__c/Lead_MTN__c.object-meta.xml
<CustomObject>
    <label>Lead MTN</label>
    <nameField>
        <label>Lead MTN Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead MTNS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>