force-app/main/default/objects/Lead_MTN__c/fields/Celular_Adicional_1__c.field-meta.xml
<CustomField>
    <fullName>Celular_Adicional_1__c</fullName>
    <label>Celular Adicional 1</label>
    <type>Phone</type>
</CustomField>