force-app/main/default/objects/Lead_MTN__c/fields/Celular_Adicional_2__c.field-meta.xml
<CustomField>
    <fullName>Celular_Adicional_2__c</fullName>
    <label>Celular Adicional 2</label>
    <type>Phone</type>
</CustomField>