force-app/main/default/objects/Lead_MTN__c/fields/Celular_Adicional__c.field-meta.xml
<CustomField>
    <fullName>Celular_Adicional__c</fullName>
    <label>Celular Adicional</label>
    <type>Phone</type>
</CustomField>