force-app/main/default/objects/Lead_MTN__c/fields/Celular_Representante__c.field-meta.xml
<CustomField>
    <fullName>Celular_Representante__c</fullName>
    <label>Celular Representante</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>