force-app/main/default/objects/Lead_MTN__c/fields/Chave_externa_WhatsApp__c.field-meta.xml
<CustomField>
    <fullName>Chave_externa_WhatsApp__c</fullName>
    <label>Chave externa (WhatsApp)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>