force-app/main/default/objects/Lead_MTN__c/fields/Data_Iteracao_MTN__c.field-meta.xml
<CustomField>
    <fullName>Data_Iteracao_MTN__c</fullName>
    <label>Data Iteracao MTN</label>
    <type>DateTime</type>
</CustomField>