force-app/main/default/objects/Lead_MTN__c/fields/Empreendimento__c.field-meta.xml
<CustomField>
    <fullName>Empreendimento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empreendimento de Interesse</label>
    <referenceTo>Empreendimento__c</referenceTo>
    <relationshipLabel>Lead MTNS</relationshipLabel>
    <relationshipName>Lead_MTNS</relationshipName>
    <type>Lookup</type>
</CustomField>