force-app/main/default/objects/Lead_MTN__c/fields/Informacoes_Adicionais__c.field-meta.xml
<CustomField>
    <fullName>Informacoes_Adicionais__c</fullName>
    <label>Informacoes Adicionais</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>