force-app/main/default/objects/Lead_MTN__c/fields/MidiaOriginal__c.field-meta.xml
<CustomField>
    <fullName>MidiaOriginal__c</fullName>
    <label>Mídia Original</label>
    <type>TextArea</type>
</CustomField>