force-app/main/default/objects/Lead_MTN__c/fields/Nome_do_Lead__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Lead__c</fullName>
    <label>Nome do Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>