force-app/main/default/objects/Lead_MTN__c/fields/Nome_do_Representante__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Representante__c</fullName>
    <label>Nome do Representante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>