force-app/main/default/objects/Lead_MTN__c/fields/PrimeiraInteracao__c.field-meta.xml
<CustomField>
    <fullName>PrimeiraInteracao__c</fullName>
    <label>Primeira Interação</label>
    <type>Date</type>
</CustomField>