force-app/main/default/objects/Lead_MTN__c/fields/Razao_Social__c.field-meta.xml
<CustomField>
    <fullName>Razao_Social__c</fullName>
    <label>Razao Social</label>
    <type>TextArea</type>
</CustomField>