force-app/main/default/objects/Lead_MTN__c/fields/RemetenteWhatsApp__c.field-meta.xml
<CustomField>
    <fullName>RemetenteWhatsApp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo responsável por definir quem foi o remetente inicial da conversa.</description>
    <inlineHelpText>Se o campo estiver selecionado (True) significa que o Remetente foi o Lead, Se o campo não estiver selecionado (False) significa que o Remetente foi corretor</inlineHelpText>
    <label>Remetente WhatsApp</label>
    <type>Checkbox</type>
</CustomField>