force-app/main/default/objects/Lead_MTN__c/fields/Roleta_de_leads__c.field-meta.xml
<CustomField>
    <fullName>Roleta_de_leads__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Roleta de leads</label>
    <referenceTo>RoletaLeads__c</referenceTo>
    <relationshipLabel>Lead MTNS</relationshipLabel>
    <relationshipName>Lead_MTNS</relationshipName>
    <type>Lookup</type>
</CustomField>