force-app/main/default/objects/Lead_MTN__c/fields/SubProduto__c.field-meta.xml
<CustomField>
    <fullName>SubProduto__c</fullName>
    <label>SubProduto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Park Mariana Life by You,inc</fullName>
            </value>
            <value>
                <fullName>Park Mariana Exclusive by You,inc</fullName>
            </value>
            <value>
                <fullName>Oscar Freire Studios Boutique by You,inc</fullName>
            </value>
            <value>
                <fullName>Eleva Harmonia Studios</fullName>
            </value>
            <value>
                <fullName>Moma Moema Studios</fullName>
            </value>
            <value>
                <fullName>Moma Moema Residencial</fullName>
            </value>
            <value>
                <fullName>Studios Alto by You,inc Paraíso</fullName>
            </value>
            <value>
                <fullName>Studios Casa Jardins by You,inc</fullName>
            </value>
            <value>
                <fullName>Moema Signature Studios by You,inc</fullName>
            </value>
            <value>
                <fullName>Core Pinheiros – Health</fullName>
            </value>
            <value>
                <fullName>Core Pinheiros – Home</fullName>
            </value>
            <value>
                <fullName>Core Pinheiros – Hotel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>