force-app/main/default/objects/Lead_MTN__c/fields/Tipo_Pessoa__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Pessoa__c</fullName>
    <label>Tipo Pessoa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Física</fullName>
            </value>
            <value>
                <fullName>Pessoa Física</fullName>
            </value>
            <value>
                <fullName>Pessoa Jurídica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>