force-app/main/default/objects/Lead_MTN__c/recordTypes/Pessoa_F_sica.recordType-meta.xml
<RecordType>
    <fullName>Pessoa_F_sica</fullName>
    <active>true</active>
    <label>Pessoa Física</label>
</RecordType>