force-app/main/default/objects/Lead_MTN__c/recordTypes/Pessoa_Jur_dica.recordType-meta.xml
<RecordType>
    <fullName>Pessoa_Jur_dica</fullName>
    <active>false</active>
    <label>Pessoa Jurídica</label>
</RecordType>