force-app/main/default/objects/Lead_MTN__c/listViews/Fila_Online_Lead_MTN.listView-meta.xml
<ListView>
    <fullName>Fila_Online_Lead_MTN</fullName>
    <filterScope>Queue</filterScope>
    <label>Fila Online</label>
    <queue>Fila_Online</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>